[package]
name = "naughtyfy"
description = "Modern fanotify wrapper."
keywords = ["fanotify", "linux", "files", "filesystem", "monitor"]
readme = "README.md"
license = "AGPL-3.0-only"
repository = "https://github.com/SubconsciousCompute/naughtyfy.git"
documentation = "https://docs.rs/naughtyfy"
authors = ["atamakahere <git@atamaka.maskmy.id>"]
version = "0.2.1"
edition = "2021"


[lib]
name = "naughtyfy"
path = "src/lib.rs"

[dependencies]
libc = "0.2.150"
